feat: Implementación de JWT para el registro e inicio de sesión
