# gestion-solicitudes/src/main/java/co/edu/uniquindio/gestion_solicitudes/controller/AuthController.java
@@ -1,0 +1,39 @@
+package co.edu.uniquindio.gestion_solicitudes.controller;
+
+import co.edu.uniquindio.gestion_solicitudes.domain.entity.Usuario;
+import co.edu.uniquindio.gestion_solicitudes.dto.request.LoginRequest;
+import co.edu.uniquindio.gestion_solicitudes.dto.request.RegistroRequest;
+import co.edu.uniquindio.gestion_solicitudes.dto.response.AuthResponse;
+import co.edu.uniquindio.gestion_solicitudes.exception.ResourceNotFoundException;
+import co.edu.uniquindio.gestion_solicitudes.repository.UsuarioRepository;
+import co.edu.uniquindio.gestion_solicitudes.service.AuthService;
+import co.edu.uniquindio.gestion_solicitudes.util.JwtUtil;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Service;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("//auth")
+@RequiredArgsConstructor
+public class AuthController {
+
+    private  final AuthService authService;
+
+    @PostMapping("/registro")
+    public ResponseEntity<AuthResponse> registro(@Valid @RequestBody RegistroRequest request){
+        return ResponseEntity.status(HttpStatus.CREATED).body(authService.registro(request));
+    }
+
+    @PostMapping("/login")
+    public ResponseEntity<AuthResponse> login(@Valid @RequestBody LoginRequest request){
+        return ResponseEntity.ok(authService.login(request));
+    }
+
+}
