# gestion-solicitudes/src/main/java/co/edu/uniquindio/gestion_solicitudes/dto/request/LoginRequest.java
@@ -1,0 +1,13 @@
+package co.edu.uniquindio.gestion_solicitudes.dto.request;
+
+import jakarta.validation.constraints.NotBlank;
+import lombok.Data;
+
+@Data
+public class LoginRequest {
+    @NotBlank
+    private String email;
+
+    @NotBlank
+    private String password;
+}
