# gestion-solicitudes/src/main/java/co/edu/uniquindio/gestion_solicitudes/dto/request/RegistroRequest.java
@@ -1,0 +1,20 @@
+package co.edu.uniquindio.gestion_solicitudes.dto.request;
+
+import co.edu.uniquindio.gestion_solicitudes.domain.enums.RolUsuario;
+import jakarta.validation.constraints.*;
+import lombok.Data;
+
+@Data
+public class RegistroRequest {
+    @NotBlank
+    private String nombre;
+
+    @NotBlank @Email
+    private String email;
+
+    @NotBlank @Size(min = 6)
+    private String password;
+
+    @NotNull
+    private RolUsuario rol;
+}
